--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rustls-pemfile = "1"
 thiserror = "1.0.44"
 tokio = { version = "1.29.1", features = ["full"]}
 tokio-rustls = "0.24.1"
+tracing = "0.1"
+tracing-subscriber = "0.3"
