--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bytes = "1.4.0"
+hpack = "0.3.0"
 rustls-pemfile = "1"
 thiserror = "1.0.44"
 tokio = { version = "1.29.1", features = ["full"]}
