--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "http2-rs"
+name = "raptor"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,9 +8,12 @@ edition = "2021"
 [dependencies]
 bytes = "1.4.0"
 chrono = "0.4.26"
+clap = { version = "4.3.23", features = ["derive"] }
 hpack = "0.3.0"
 mime_guess = "2.0.4"
 rustls-pemfile = "1"
+serde = {version = "1.0.185", features = ["derive"]}
+serde_yaml = "0.9.25"
 thiserror = "1.0.44"
 tokio = { version = "1.29.1", features = ["full"]}
 tokio-rustls = "0.24.1"
