--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytes = "1.4.0"
 chrono = "0.4.26"
 clap = { version = "4.3.23", features = ["derive"] }
 hpack = "0.3.0"
+httparse = "1.8.0"
 mime_guess = "2.0.4"
 rustls-pemfile = "1"
 serde = {version = "1.0.185", features = ["derive"]}
