--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rustls-pemfile = "1"
 serde = {version = "1.0.185", features = ["derive"]}
 serde_yaml = "0.9.25"
 thiserror = "1.0.44"
-tokio = { version = "1.29.1", features = ["full"]}
+tokio = { version = "1.29.1", features = ["rt", "net", "macros", "io-util", "fs", "rt-multi-thread"]}
 tokio-rustls = "0.24.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
