--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ thiserror = "1.0.44"
 tokio = { version = "1.29.1", features = ["rt", "net", "macros", "io-util", "fs", "rt-multi-thread"]}
 tokio-rustls = "0.24.1"
 tracing = "0.1"
+tracing-appender = "0.2.3"
 tracing-subscriber = "0.3"
