feat(http2): Add basic header frame support

--- a/http2/Cargo.toml
+++ b/http2/Cargo.toml
@@ -10,6 +10,7 @@ thiserror = { workspace = true }
 tokio-rustls = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
+fluke-hpack = "0.3.0"
 
 [dev-dependencies]
 rstest = "0.18.2"
