feat(core): Introduce core library crate

--- a/http2/Cargo.toml
+++ b/http2/Cargo.toml
@@ -11,6 +11,7 @@ tokio-rustls = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 fluke-hpack = "0.3.0"
+raptor_core = { path = "../raptor-core" }
 
 [dev-dependencies]
 rstest = "0.18.2"
