--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
-members = ["http2", "raptor"]
+members = [ "http2", "raptor", "raptor-core"]
 resolver = "2"
 
 [workspace.dependencies]
+bytes = "1.4.0"
+clap = { version = "4.5.4", features = ["derive"] }
 thiserror = "1.0.44"
 tokio-rustls = "=0.26.0"
 tokio = { version = "1.37.0", features = ["rt", "net", "macros", "io-util", "fs", "rt-multi-thread", "sync"] }
