--- a/raptor/Cargo.toml
+++ b/raptor/Cargo.toml
@@ -6,15 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1.4.0"
-chrono = "0.4.26"
-clap = { version = "4.5.4", features = ["derive"] }
+bytes = { workspace = true }
 httparse = "1.8.0"
+clap = { workspace = true }
 http2 = { path = "../http2" }
-mime_guess = "2.0.4"
+raptor_core = { path = "../raptor-core" }
 rustls-pemfile = "2"
-serde = {version = "1.0.185", features = ["derive"]}
-serde_yaml = "0.9.25"
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-rustls = { workspace = true }
