feat(http2): Handle continuation frames

--- a/raptor/Cargo.toml
+++ b/raptor/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = { workspace = true }
 httparse = "1.8.0"
 clap = { workspace = true }
 http2 = { path = "../http2" }
@@ -18,3 +17,4 @@ tokio-rustls = { workspace = true }
 tracing = { workspace = true }
 tracing-appender = { workspace = true }
 tracing-subscriber = { workspace = true }
+format-bytes = "0.3.0"
