--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ resolver = "2"
 [workspace.dependencies]
 bytes = "1.4.0"
 clap = { version = "4.5.4", features = ["derive"] }
+http = "1.1.0"
 thiserror = "1.0.44"
+tokio = { version = "1.37.0", features = ["rt", "net", "macros", "fs", "rt-multi-thread"] }
 tokio-rustls = "=0.26.0"
-tokio = { version = "1.37.0", features = ["rt", "net", "macros", "io-util", "fs", "rt-multi-thread", "sync"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
 tracing-appender = "0.2.3"
+tracing-subscriber = "0.3"
