--- a/http2/Cargo.toml
+++ b/http2/Cargo.toml
@@ -6,12 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = { workspace = true }
 thiserror = { workspace = true }
-tokio-rustls = { workspace = true }
 tokio = { workspace = true }
+tokio-rustls = { workspace = true }
 tracing = { workspace = true }
-fluke-hpack = "0.3.0"
+
 raptor_core = { path = "../raptor-core" }
+
+h2 = "0.4.5"
+http = {  workspace = true }
 
 [dev-dependencies]
 rstest = "0.18.2"
